--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_spinkit: ^5.2.1
   cross_file: ^0.3.4+2
+  diff_match_patch: ^0.4.1
 
 dev_dependencies:
   flutter_test:
