--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,9 @@ dependencies:
   share_plus: ^11.0.0
   permission_handler: ^12.0.1
   flutter_spinkit: ^5.2.1
-  cross_file: ^0.3.4+2
-  diff_match_patch: ^0.4.1
+  syncfusion_flutter_pdfviewer: ^30.1.39
+  shared_preferences: ^2.5.3
+  flutter_markdown: ^0.7.7+1
 
 dev_dependencies:
   flutter_test:
