--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,8 @@ dependencies:
   flutter_spinkit: ^5.2.1
   syncfusion_flutter_pdfviewer: ^30.1.39
   shared_preferences: ^2.5.3
-  flutter_markdown: ^0.7.7+1
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^7.0.1
 
 dev_dependencies:
   flutter_test:
