--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   shared_preferences: ^2.5.3
   qr_flutter: ^4.1.0
   mobile_scanner: ^7.0.1
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
