--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   qr_flutter: ^4.1.0
   mobile_scanner: ^7.0.1
   webview_flutter: ^4.13.0
+  intl: ^0.20.2
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
